[gd_scene load_steps=7 format=3 uid="uid://bnhpcx4y61u2l"]

[ext_resource type="Script" path="res://scripts/projectiles/flaming_ball.gd" id="1_rg7af"]
[ext_resource type="PackedScene" uid="uid://b3012evdp0k0" path="res://scenes/components/fire_emitter.tscn" id="2_rg40e"]
[ext_resource type="Texture2D" uid="uid://narnijprcq8o" path="res://textures/particles/fancy_sparkle.png" id="3_c6cf1"]
[ext_resource type="PackedScene" uid="uid://6bfdrlmoe75y" path="res://scenes/components/hurtbox.tscn" id="3_uqgtu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bequm"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pv2id"]
radius = 9.0

[node name="flaming_ball" type="Area2D"]
script = ExtResource("1_rg7af")

[node name="fire_emitter" parent="." instance=ExtResource("2_rg40e")]
position = Vector2(0, 7)
properties = {
"dimensions": Vector2(24, -24),
"emit_cd": 1
}
active = true
fire_size = 0.75

[node name="sparkle" type="Sprite2D" parent="."]
texture = ExtResource("3_c6cf1")

[node name="hurtbox" parent="." instance=ExtResource("3_uqgtu")]
damage = 4
ignore_in_detection = ["evil"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource("CircleShape2D_bequm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pv2id")
debug_color = Color(0.878431, 0.188235, 0.694118, 0.419608)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="has_hit" from="hurtbox" to="." method="_on_hurtbox_has_hit"]
